--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head><meta charset="utf-8" /></head>
 <body>
-<title>Antibody & Effifacy Waning with Time</title>
+<title>Antibody & Efficacy Waning with Time</title>
 <h1>Antibody & Effifacy Waning with Time</h1>
 <p>This page is an attempt at visualizing some of the vaccine efficacy data and predictions in an easy, interactive manner.  This page relies primarily on the methods and data from the excellent paper "What level of neutralising antibody protects from COVID-19?", Khoury et al., Nature Medicine. [1]</p>
 
