Added further sources and adjusted text slightly

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ The paper combines data from various vaccine trials with established knowledge o
 </p>
 
 <p>
-The data for boosters is derived from the Pfizer and Moderna trial reports from fall 2021, where they reported antibody levels relative to those in the original 2 dose trial. [2,3]
+The data for boosters is derived from the Pfizer, Moderna, and J and J trial reports from fall 2021, where they reported antibody levels relative to those in the original 2 dose trial. [2,3,4]  Additional data was gathered from the NIH Mix-and-Match booster study. [5]
 </p>
 
 <p>
@@ -107,13 +107,24 @@ Medrxiv: https://www.medrxiv.org/content/10.1101/2021.03.09.21252641v1#:~:text=T
 PDF: https://www.medrxiv.org/content/10.1101/2021.03.09.21252641v1.full.pdf<br>
 <br>
 2. Pfizer VRBPAC Presentation, VRBPAC meeting September 17 2021:<br>
-https://www.fda.gov/media/152240/download (Primarily slide 23)<br>
+https://www.fda.gov/media/152240/download (Primarily slides 23 and 24)<br>
 Full meeting materials: https://www.fda.gov/advisory-committees/advisory-committee-calendar/vaccines-and-related-biological-products-advisory-committee-september-17-2021-meeting-announcement#event-materials<br>
 <br>
 3. Moderna VRBPAC Presentation, VRBPAC meeting October 14-15 2021:<br>
 https://www.fda.gov/media/153089/download (Primarily slide 15)<br>
 Full meeting materials:<br>
 https://www.fda.gov/advisory-committees/advisory-committee-calendar/vaccines-and-related-biological-products-advisory-committee-october-14-15-2021-meeting-announcement<br>
+<br>
+4. Janssen VRBPAC Presentation, VRBPAC meeting October 14-15 2021:<br>
+https://www.fda.gov/media/153129/download (Primarily slides 31 and 32)<br>
+Full meeting materials:<br>
+https://www.fda.gov/advisory-committees/advisory-committee-calendar/vaccines-and-related-biological-products-advisory-committee-october-14-15-2021-meeting-announcement<br>
 </p>
+5. Janssen VRBPAC Presentation, VRBPAC meeting October 14-15 2021:<br>
+https://www.fda.gov/media/153128/download (Primarily slides 20 and 21) <br>
+Full meeting materials:<br>
+https://www.fda.gov/advisory-committees/advisory-committee-calendar/vaccines-and-related-biological-products-advisory-committee-october-14-15-2021-meeting-announcement<br>
+</p>
+</body>
 </body>
 </html>
