--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ https://www.fda.gov/media/153129/download (Primarily slides 31 and 32)<br>
 Full meeting materials:<br>
 https://www.fda.gov/advisory-committees/advisory-committee-calendar/vaccines-and-related-biological-products-advisory-committee-october-14-15-2021-meeting-announcement<br>
 </p>
-5. Janssen VRBPAC Presentation, VRBPAC meeting October 14-15 2021:<br>
+5. NIH Mix-and-Match Study VRBPAC Presentation, VRBPAC meeting October 14-15 2021:<br>
 https://www.fda.gov/media/153128/download (Primarily slides 20 and 21) <br>
 Full meeting materials:<br>
 https://www.fda.gov/advisory-committees/advisory-committee-calendar/vaccines-and-related-biological-products-advisory-committee-october-14-15-2021-meeting-announcement<br>
